# city4u_water_meter

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SUPPORTED_MUNICIPALITIES.md  fetch_water_data.py  hacs.json  pyproject.toml
.github/: release.yml
.github/workflows/: code-quality.yml  release.yml  validate.yml
custom_components/city4u/: README.md  __init__.py  api.py  config_flow.py  const.py  manifest.json  municipalities.py  sensor.py  services.py  services.yaml
custom_components/city4u/translations/: en.json
scripts/: README.md  release.sh  update_municipalities.py
src/read_water/: fetch_water_data.py
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_delayed_data.py  test_init.py  test_sensor.py
