[project]
name = "read_water"
version = "0.1.0"
description = "\"Water reader using the city4u website\""
authors = [
    {name = "Tsvi Mostovicz", email = "ttmost@gmail.com"},
]
dependencies = ["requests>=2.32.4"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "isort>=6.0.1",
    "ruff>=0.12.1",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "mypy>=1.16.1",
    "types-requests>=2.32.4.20250611",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
