[project]
name = "city4u_water_meter"
version = "1.0.2"
description = "Home Assistant custom component for City4U water consumption monitoring"
authors = [
    {name = "Tsvi Mostovicz", email = "ttmost@gmail.com"},
]
dependencies = []
requires-python = ">=3.13.2"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "isort>=7.0.0",
    "ruff>=0.15.0",
    "pre-commit>=4.5.1",
    "pylint>=4.0.4",
    "mypy>=1.19.1",
    "homeassistant>=2026.2.1",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-homeassistant-custom-component>=0.13.314",
    "aiohttp>=3.13.3",
    "playwright>=1.58.0",
    "bump-my-version>=0.26.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
release = {shell = "scripts/release.sh \"$@\"", help = "Bump version and push (usage: pdm run release [-n] patch|minor|major)"}

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
mypy_path = "."

[[tool.mypy.overrides]]
module = "pytest_homeassistant_custom_component.*"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "1.0.2"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "custom_components/city4u/manifest.json"
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'